# fastapi-booking-platform

./: .gitignore
booking-platform/: README.md
booking-platform/backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
booking-platform/backend/alembic/: env.py
booking-platform/backend/alembic/versions/: 6fed83e5f8c8_create_users_table.py  b912e66371ed_create_movies_table.py  fdb1fa44b2d3_add_refresh_tokens_table.py  ffc73bb596a4_create_shows_table.py
booking-platform/backend/app/api/v1/routes/: auth.py  movies.py  shows.py  users.py
booking-platform/backend/app/core/: config.py  security.py
booking-platform/backend/app/db/: base.py  session.py
booking-platform/backend/app/dependencies/: auth.py  db.py
booking-platform/backend/app/models/: base.py  movie.py  refresh_token.py  show.py  user.py
booking-platform/backend/app/repositories/: movie_repository.py  refresh_token_repository.py  show_repository.py  user_repository.py
booking-platform/backend/app/schemas/: auth.py  movie.py  show.py
booking-platform/backend/app/services/: auth_service.py  movie_service.py  show_service.py
booking-platform/backend/tests/: conftest.py  test_auth.py  test_routes_auth.py
booking-platform/frontend/: .gitignore  index.html  package-lock.json  package.json
booking-platform/frontend/src/: main.tsx
booking-platform/frontend/src/app/: App.tsx  providers.tsx  router.tsx
booking-platform/frontend/src/config/: env.ts
notes/: frontend-notes  frontend-notes.txt  installation-notes.txt  project-plan.md
(+34 files in other folders)
